public/styles/site/_component-contact-card.scss
.contact-card__details {
    font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
    padding-top: 0.5em;
}

.contact-card__name {
    font-size: 1.4em;
    font-weight: 300;
    line-height: 1.6em;
}

.contact-card__details-divider {
    margin: 0 0.5em;
}

.contact-card__icons {
	position: absolute;
	top: 10px;
	right: 0;
}

.contact-card__icon {
	width: 20px;
}

